intro & conclusion minor edits & re-ordeing and citations

--- a/chapter7-librec.tex
+++ b/chapter7-librec.tex
@@ -342,13 +342,13 @@ Note that a re-ranking step can participate in the optimization aspects of \liba
     \vspace{-0.15in}
 \end{figure}
 
-% \begin{figure}[!htb]
-%     \centering
-%     \includegraphics[width=0.6\linewidth]{imgs/la/slack-post.png}
-%     \caption{Sample auto-generated Slack posts. Such notifications provide experimenters and research teams with asynchronous notifications of study progress.}
-%     \label{fig:slack}
-%     \vspace{-0.15in}
-% \end{figure}
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=0.6\linewidth]{imgs/la/slack-post.png}
+    \caption{Sample auto-generated Slack posts. Such notifications provide experimenters and research teams with asynchronous notifications of study progress.}
+    \label{fig:slack}
+    \vspace{-0.15in}
+\end{figure}
 
 \section{Related Work}
 
