--- a/chapter8-conclusion.tex
+++ b/chapter8-conclusion.tex
@@ -4,19 +4,22 @@
 % \section{Transparency}
 % \section{Data minimization}
 
-Integrating the goal of fairness into recommender systems is not easy as it has significant trade-offs with accuracy. Accuracy in recommender systems is the ability of that system to reproduce the preferences of its users. And the objective of fairness, depending on its definition, application, context, the flaws that each part of the pipeline has, the stakeholders involved in the recommender systems and the priority of their fairness concern, can have different contradictions with the goal of accuracy. 
+As we have seen, integrating the goal of fairness into recommender systems is not easy as it has significant trade-offs with accuracy. Accuracy in recommender systems is the ability of that system to reproduce the preferences of its users. And the objective of fairness, depending on its definition, application, context, the flaws that each part of the pipeline has, the stakeholders involved in the recommender systems and the priority of their fairness concern, can have different contradictions with the goal of accuracy. 
 
-Some of these issues are obstacles that prevent the model from reaching an ideal accuracy. Inconsistency in users' rating behavior, imbalance of data between the majority and minority groups in the dataset, the inevitable popularity bias, and the positive feedback loops in recommendations are some of the issues that diverge the model from its primary goal. Besides preventing the model from accurately predicting user behavior, these issues can cause societal harm or exacerbate the harms towards users, specially the protected group. Therefore, having accuracy as the only objective regardless of its potential social impacts, particularly on the protected group(s), will not serve the users as much as one expects. 
+Some of these issues are obstacles that prevent the model from reaching an ideal accuracy. Inconsistency in users' rating behavior, imbalance of data between the majority and minority groups in the dataset, the inevitable popularity bias, and the positive feedback loops in recommendations are some of the issues that diverge the model from its primary goal. Besides preventing the model from accurately predicting user behavior, these issues can cause societal harm or exacerbate the harms towards users, specially protected groups. Therefore, having accuracy as the only objective regardless of its potential social impacts, will not necessarily serve the users as much as one expects. 
 
-Therefore, reaching a satisfactory level of accuracy while preventing the model from being unfair to users becomes essential. Throughout this dissertation, several recommendation models and re-ranking approaches are presented. These methods aim for controlling the balance between accuracy and fairness to rich a reasonable trade-off. Although, these approaches show promising results, they have intrinsic limitations. Rather than thinking about these solutions as ultimate answers to the challenge of accuracy/fairness trade-off, they should be thought of as examples of tools that other researchers can use and apply in their own applications. 
+Therefore, reaching a satisfactory level of accuracy while preventing the model from being unfair to users becomes essential. Throughout this dissertation, several recommendation models and re-ranking approaches are presented. These methods aim for controlling the balance between accuracy and fairness to reach a reasonable trade-off. Although, these approaches show promising results, they have intrinsic limitations. Rather than thinking about these solutions as ultimate answers to the challenge of accuracy/fairness trade-off, they should be thought of as examples of tools that other researchers can use and apply in their own applications. 
 
 One of the key challenges in this area is the domain-specificity of recommendation environments. The utilities delivered to each class of stakeholder are highly dependent on the type of item being recommended, the social function of the platform, and the interactions that it enables. Therefore, it is difficult to find appropriate datasets for experimentation and challenging to generalize across recommendation scenarios.
 
 % balanced neighborbood 
-In our future work, we plan to extend our methods and findings in several ways. A multisided platform may require fairness to be considered for both consumers and providers at the same time: a CP-fairness condition. For example, a rental property recommender may treat minority applicants as a protected class and wish to ensure that they are recommended properties similar to unprotected renters. At the same time, the recommender may wish to treat minority landlords as a protected class and ensure that highly-qualified tenants are referred to them at the same rate as to landlords who are not in the protected class. A critical question for future research is how the outcomes for each stakeholder and the overall system performance are affected by combining consumer- and provider-fairness concerns. We intend to test the idea of Balanced Neighborhoods on other algorithms such as user-Knn and item-Knn. OFAiR algorithm takes the weights of the fairness concerns into account, so it can emphasize on the importance of the protected group concerns over the others. Previously, these weights were set manually. Metric learning and voting systems used in distributive justice are good alternatives to use for setting the weights of fairness concerns.
+In our future work, we plan to extend our methods and findings in several ways. A multisided platform may require fairness to be considered for both consumers and providers at the same time: a CP-fairness condition. For example, a rental property recommender may treat minority applicants as a protected class and wish to ensure that they are recommended properties similar to unprotected renters. At the same time, the recommender may wish to treat minority landlords as a protected class and ensure that highly-qualified tenants are referred to them at the same rate as to landlords who are not in the protected class. A critical question for future research is how the outcomes for each stakeholder and the overall system performance are affected by combining consumer- and provider-fairness concerns. 
 
-Finally, note that philanthropy and, specifically, Kiva Microfund is the main case study for this research. However, the unfairness of this system and its effects on different stakeholders are not fully analyzed (e.g., and the real effect of unfairness on borrowers and perspective of lenders to Kiva's fairness interventions). The proposed methods, here, address the algorithmic fairness issue of the borrowers that is only one part of the equation.
+We intend to test the idea of Balanced Neighborhoods on other algorithms such as user-Knn and item-Knn and additional datasets. OFAiR algorithm takes the weights of the fairness concerns into account, so it can emphasize on the importance of the protected group concerns over the others. Previously, these weights were set manually. Metric learning and voting systems used in distributive justice are good alternatives to use for setting the weights of fairness concerns.
 
+Finally, although philanthropy and, specifically, Kiva Microfund is the main case study for this research, the unfairness of this system in practice and the perspectives of its different stakeholders remain the subject of continuing study. The proposed methods here which address the algorithmic fairness issue of borrowers/providers that is only one part of this larger research effort.
+
+% \todo[inline]{Probably you should have separate paragraphs for the CP, BN, and OFAIR related work topics and more discussion there.}
 
 % The other approach to explore is to use voting methods in the fair resource allocation literature in the computational social choice field. Specifically, the cake-cutting problem, where we want to allocate cake slices fairly where we assume users have different preferences for different layers of the cake, which is similar to our research problem here, where users have different preferences over different dimensions.
 
