--- a/chapter4-methodology.tex
+++ b/chapter4-methodology.tex
@@ -578,3 +578,6 @@ I performed the experiments on the following public and proprietary datasets: Mo
     % \begin{equation}
     %     b_i = (\sum_{w^+ \in W_i^+}{w^+} - \sum_{w^- \in W_i^-}{w^-})^2
     % \end{equation}
+
+
+% \todo[inline]{fix the notations based on this : https://arxiv.org/pdf/1902.01348.pdf}
