--- a/chapter5-inprocess.tex
+++ b/chapter5-inprocess.tex
@@ -185,21 +185,21 @@ To evaluate our approach for provider fairness, we are using the Kiva\footnote{h
 % a dataset extracted from the Kiva.org microlending site using the site's API\footnote{http://build.kiva.org/}. Again, we have constructed our own scenario using this data, focusing on geographic region. In our dataset, we find that there are some geographic regions with a higher than average number of unfunded loans. In these regions, borrowers have a lower probability of getting the desired capital. See Table~\ref{tab:unfunded}.
 
 % \todo[inline]{remove since it's in the methodology section}
-\begin{table}
-    \centering
-\begin{tabular}{l|l|r}
-    Category & Region & Unfunded \% \\ \hline
-    Unprotected & North America & 1.73 \\
-    & Eastern Europe & 0.99 \\
-    & South America & 4.33 \\
-    & Asia & 6.70 \\ \hline
-    Protected & Africa & 10.57 \\
-    & Middle East & 13.23 \\
-    & Central America & 8.81 \\
-\end{tabular}
-    \caption{Percentage of unfunded loans by region}
-    \label{tab:unfunded}
-\end{table}
+% \begin{table}
+%     \centering
+% \begin{tabular}{l|l|r}
+%     Category & Region & Unfunded \% \\ \hline
+%     Unprotected & North America & 1.73 \\
+%     & Eastern Europe & 0.99 \\
+%     & South America & 4.33 \\
+%     & Asia & 6.70 \\ \hline
+%     Protected & Africa & 10.57 \\
+%     & Middle East & 13.23 \\
+%     & Central America & 8.81 \\
+% \end{tabular}
+%     \caption{Percentage of unfunded loans by region}
+%     \label{tab:unfunded}
+% \end{table}
 
 % For the purposes of our experiments, we will assume that one of the goals of a microlending site is to equalize access to capital across geographic regions. Kiva does not currently offer personalized recommendation of loans to its users, but if it did, a fairness-aware recommendation approach could be used to promote the loans of borrowers in the underserved regions. 
 
