--- a/refs.bib
+++ b/refs.bib
@@ -1686,7 +1686,12 @@ series = {RecSys '18}
   url = 	 {https://proceedings.mlr.press/v81/ensign18a.html},
 }
 
-
+@article{berk2017convex,
+  title={A convex framework for fair regression},
+  author={Berk, Richard and Heidari, Hoda and Jabbari, Shahin and Joseph, Matthew and Kearns, Michael and Morgenstern, Jamie and Neel, Seth and Roth, Aaron},
+  journal={arXiv preprint arXiv:1706.02409},
+  year={2017}
+}
 
 @inproceedings{NEURIPS2019_7690dd4d,
  author = {Zhang, Xueru and Khaliligarekani, Mohammadmahdi and Tekin, Cem and liu, mingyan},
